# agent

./: .gitignore  CNRT.py  Handler.py  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  agent.py  exceptions.py  interrupt.py  job.py  package-lock.json  requirements_dev.txt  setup.cfg  setup.py  test_agent.py
Wiki/: Create custom handlers.md  Create custom time calculator.md
agent/: agent.py  exceptions.py  handler.py  interrupt.py  job.py
agent/tests/: test.py
agent_Job_scheduler.egg-info/: PKG-INFO  SOURCES.txt
src/agent/: agent.py  handler.py  job.py
tests/: job_a1.job  job_a1.pickle  test.py
