[metadata]
name = agent_Job_scheduler
version = 0.2.2
description = agent is a python job scheduler
author = Mohammad Reza Golsorkhi
author_email = Mgol2077@outlook.com
license = Apache License 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License

long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = tasks, jobs,periodic, task,interval, periodic_job, periodic job, flask, style, decorator, agent, job, scheduler, time, agent_Job, agent_Job_scheduler
#home_page = https://github.com/MohammadRezaG/agent/
project_urls =
    Bug Tracker = https://github.com/MohammadRezaG/agent/issues
    Documentation = https://github.com/MohammadRezaG/agent/wiki
    Source Code = https://github.com/MohammadRezaG/agent

[options]
packages =
    agent
python_requires = >=3.8
package_dir =
    =agent
zip_safe = True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160